# python-project-83

./: .build.sh.swp  .env.example  .gitignore  .pyproject.toml.swp  Makefile  README  README.md  build.sh  database.sql  pyproject.toml  validation.py
page_analyzer/: __init__.py  app.py  database.py  from flask import Flask, render_template.py  parser.py  parser_bs4.py  url_validator.py  validation.py
page_analyzer/templates/: base.html  index.html  styles.css  url.html  urls.html
